# abstract-ns

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  README.rst  bulk.yaml  index.html  search-index.js  vagga.yaml
abstract_ns/: AddressIter.t.html  enum.Error.html  fn.union_addresses.html  fn.union_stream.html  index.html  sidebar-items.js  struct.Address.html  struct.AddressBuilder.html  struct.AddressIter.html  struct.MemResolver.html  struct.PriorityIter.html  struct.Router.html  struct.RouterBuilder.html  struct.StaticStream.html  struct.Union.html  struct.WeightedSet.html  trait.Resolver.html  type.Name.html  type.Weight.html  union_addresses.v.html
abstract_ns/address/: AddressBuilder.t.html  PriorityIter.t.html  WeightedSet.t.html  struct.Address.html  struct.AddressBuilder.html  struct.AddressIter.html  struct.PriorityIter.html  struct.WeightedSet.html
abstract_ns/error/: enum.Error.html
abstract_ns/mem/: MemResolver.t.html  StaticStream.t.html  struct.MemResolver.html  struct.StaticStream.html
abstract_ns/resolver/: trait.Resolver.html
abstract_ns/routing/: struct.Router.html  struct.RouterBuilder.html
abstract_ns/union/: fn.union_addresses.html  fn.union_stream.html  struct.Union.html  union_stream.v.html
bytes/: enum.BigEndian.html  enum.LittleEndian.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html  trait.ByteOrder.html  trait.IntoBuf.html
bytes/buf/: index.html  struct.Chain.html  struct.Iter.html  struct.Reader.html  struct.Take.html  struct.Writer.html  trait.Buf.html  trait.BufMut.html  trait.FromBuf.html  trait.IntoBuf.html
domain/: index.html  sidebar-items.js
domain/bits/: DName.t.html  index.html  sidebar-items.js  struct.DNameBuf.html  struct.DNameSlice.html  struct.ParsedDName.html  trait.DName.html
domain/iana/: index.html  sidebar-items.js
domain/master/: index.html  sidebar-items.js
domain/rdata/: MasterRecordData.t.html  enum.MasterRecordData.html  fmt_rdata.v.html  fn.fmt_rdata.html  index.html  sidebar-items.js
domain/resolv/: index.html  sidebar-items.js  struct.Query.html  struct.Resolver.html
domain/utils/: index.html  sidebar-items.js
examples/: blocking.rs  default_stream.rs  mem.rs  routing.rs  stub.rs  threaded.rs
futures/: index.html  macro.task_local.html  macro.try_ready.html  type.Poll.html
futures/executor/: fn.spawn.html  index.html  sidebar-items.js  struct.NotifyHandle.html  struct.Run.html  struct.Spawn.html  trait.Executor.html  trait.Notify.html  trait.Unpark.html  trait.UnsafeNotify.html
futures/future/: enum.Either.html  enum.ExecuteErrorKind.html  fn.empty.html  fn.err.html  fn.join_all.html  fn.lazy.html  fn.loop_fn.html  fn.ok.html  fn.poll_fn.html  fn.result.html  fn.select_all.html  fn.select_ok.html  index.html  sidebar-items.js  struct.AndThen.html  struct.CatchUnwind.html  struct.Empty.html  struct.ExecuteError.html  struct.Flatten.html  struct.FlattenStream.html  struct.FromErr.html  struct.Fuse.html  struct.FutureResult.html  struct.IntoStream.html  struct.Join.html  struct.Join3.html  struct.Join4.html  struct.Join5.html  struct.JoinAll.html  struct.Lazy.html  struct.LoopFn.html  struct.Map.html  struct.MapErr.html  struct.OrElse.html  struct.PollFn.html  struct.Select.html  struct.Select2.html  struct.SelectAll.html  struct.SelectNext.html  struct.SelectOk.html  (+9 more)
futures/sink/: index.html  struct.Send.html  (+9 more)
futures_cpupool/: index.html  struct.Builder.html  struct.CpuFuture.html  struct.CpuPool.html
iovec/: constant.MAX_LENGTH.html  index.html  struct.IoVec.html
lazycell/: index.html  struct.AtomicLazyCell.html  struct.LazyCell.html
log/: enum.LogLevel.html  enum.LogLevelFilter.html  fn.set_logger.html  fn.set_logger_raw.html  index.html  struct.LogLocation.html  struct.LogMetadata.html  struct.LogRecord.html  struct.MaxLogLevelFilter.html  struct.SetLoggerError.html  struct.ShutdownLoggerError.html  trait.Log.html
mio/: index.html  struct.Events.html  struct.Poll.html  struct.PollOpt.html  struct.Ready.html  struct.Registration.html  struct.SetReadiness.html  struct.Token.html
net2/: index.html  struct.TcpBuilder.html  struct.UdpBuilder.html  trait.TcpListenerExt.html  trait.TcpStreamExt.html  trait.UdpSocketExt.html
ns-dns-tokio/: Cargo.toml
ns-dns-tokio/examples/: resolve.rs
ns-dns-tokio/src/: lib.rs
ns-std-threaded/: Cargo.toml
ns-std-threaded/examples/: resolve.rs
ns-std-threaded/src/: lib.rs
ns_dns_tokio/: index.html  sidebar-items.js  struct.DnsResolver.html
ns_std_threaded/: ThreadedResolver.t.html  index.html  sidebar-items.js  struct.ThreadedResolver.html
num_cpus/: index.html
scoped_tls/: index.html  struct.ScopedKey.html
slab/: index.html  struct.Iter.html  struct.IterMut.html  struct.Slab.html
src/: addr.rs  address.rs  async.rs  channels.rs  combinators.rs  error.rs  identity.rs  into_stream.rs  ip_list.rs  lib.rs  mem.rs  mocks.rs  name.rs  resolver.rs  routing.rs  stdlib_dns.rs  stream_once.rs  stub.rs  threaded.rs  union.rs
tests/: resolve_mock.rs
tokio_core/: index.html  macro.try_nb.html
tokio_io/: index.html  macro.try_nb.html  trait.AsyncRead.html  trait.AsyncWrite.html
(+856 files in other folders)
