[package]
name = "ns-std-threaded"
description = """
    Name service implementation for abstract-ns that uses
    stdlib's implementation run in a thread pool
"""
license = "MIT/Apache-2.0"
keywords = ["dns", "name", "service", "discovery"]
homepage = "http://github.com/tailhook/abstract-ns"
version = "0.2.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
workspace = '../'

[dependencies]
futures = "0.1.2"
futures-cpupool = "0.1.6"
abstract-ns = { version = "0.3.4", path = ".." }

[dev-dependencies]
argparse = "0.2.1"
